--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # Site configuration
-GATSBY_SHORT_TITLE=3d-streamer
-GATSBY_SITE_DESCRIPTION=A small Gatsby.js website to watch RTMP/HLS streams of a custom RTMP/HLS server with nginx (3D printing)
-GATSBY_SITE_TITLE=3D-printing streamer
+NEXT_PUBLIC_SHORT_TITLE=3d-streamer
+NEXT_PUBLIC_SITE_DESCRIPTION=A small NEXT_PUBLIC.js website to watch RTMP/HLS streams of a custom RTMP/HLS server with nginx (3D printing)
+NEXT_PUBLIC_SITE_TITLE=3D-printing streamer
+NEXT_PUBLIC_STREAM_HOST=localhost
+NEXT_PUBLIC_STREAM_NAME=stream
+NEXT_PUBLIC_STREAM_URL=http://$NEXT_PUBLIC_STREAM_HOST/hls/$NEXT_PUBLIC_STREAM_NAME.m3u8
 SITE_BACKGROUND_COLOR="#334155"
 SITE_THEME_COLOR="#BE123C"
-SITE_URL=http://localhost:8000
