--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
         "name": "Robin Walter",
         "url": "https://robinwalter.me"
     },
+    "babelMacros": {
+        "twin": {
+            "preset": "emotion"
+        }
+    },
     "bugs": {
         "url": "https://github.com/robinwalterfit/3d-streamer/issues"
     },
@@ -15,75 +20,76 @@
         "not dead"
     ],
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "@fontsource/aldrich": "^4.5.7",
-        "@fontsource/fira-code": "^4.5.12",
-        "@fortawesome/fontawesome-svg-core": "^6.2.1",
-        "@fortawesome/free-brands-svg-icons": "^6.2.1",
-        "@fortawesome/free-regular-svg-icons": "^6.2.1",
-        "@fortawesome/free-solid-svg-icons": "^6.2.1",
-        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@emotion/cache": "11.10.5",
+        "@emotion/css": "11.10.5",
+        "@emotion/react": "11.10.5",
+        "@emotion/server": "11.10.0",
+        "@emotion/styled": "11.10.5",
+        "@fontsource/aldrich": "4.5.7",
+        "@fontsource/fira-code": "4.5.12",
+        "@fortawesome/fontawesome-svg-core": "6.2.1",
+        "@fortawesome/free-brands-svg-icons": "6.2.1",
+        "@fortawesome/free-regular-svg-icons": "6.2.1",
+        "@fortawesome/free-solid-svg-icons": "6.2.1",
+        "@fortawesome/react-fontawesome": "0.2.0",
+        "@next/bundle-analyzer": "13.1.1",
         "caniuse-lite": "latest",
-        "chalk": "^4.0.0",
-        "clsx": "^1.2.1",
-        "fs-extra": "^10.1.0",
-        "gatsby": "^5.3.0",
-        "gatsby-plugin-canonical-urls": "^5.3.0",
-        "gatsby-plugin-emotion": "^8.3.0",
-        "gatsby-plugin-image": "^3.3.2",
-        "gatsby-plugin-manifest": "^5.3.1",
-        "gatsby-plugin-next-seo": "^1.10.0",
-        "gatsby-plugin-pnpm": "^1.2.10",
-        "gatsby-plugin-sharp": "^5.3.2",
-        "gatsby-source-filesystem": "^5.3.1",
-        "gatsby-transformer-sharp": "^5.3.1",
-        "lodash": "^4.17.21",
-        "loglevel": "^1.8.0",
-        "loglevel-plugin-prefix": "^0.8.4",
-        "moment": "^2.29.4",
-        "prop-types": "^15.8.1",
-        "react": "^18.2.0",
-        "react-is": "^18.2.0"
+        "chalk": "4.0.0",
+        "clsx": "1.2.1",
+        "hls.js": "1.2.9",
+        "loglevel": "1.8.0",
+        "loglevel-plugin-prefix": "0.8.4",
+        "moment": "2.29.4",
+        "next": "13.1.1",
+        "preact": "10.11.3",
+        "prop-types": "15.8.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "sharp": "0.31.3"
     },
-    "description": "A small Gatsby.js website to watch RTMP/HLS streams of a custom RTMP/HLS server with nginx (3D printing)",
+    "description": "A small Next.js website to watch RTMP/HLS streams of a custom RTMP/HLS server with nginx (3D printing)",
     "devDependencies": {
-        "@babel/eslint-parser": "^7.18.2",
-        "@babel/preset-react": "^7.18.6",
-        "@commitlint/cli": "^17.0.3",
-        "@commitlint/config-conventional": "^17.0.3",
-        "@commitlint/cz-commitlint": "^17.0.3",
-        "@testing-library/cypress": "^9.0.0",
-        "@types/fs-extra": "^9.0.13",
-        "@types/lodash": "^4.14.185",
-        "@types/node": "^18.11.18",
-        "@types/prop-types": "^15.7.5",
-        "@types/react": "^18.0.18",
-        "@types/react-is": "^17.0.3",
-        "@typescript-eslint/eslint-plugin": "^5.30.6",
-        "@typescript-eslint/parser": "^5.30.6",
-        "axe-core": "^4.6.1",
-        "commitizen": "^4.2.4",
-        "cypress": "11.2.0",
-        "cypress-axe": "^1.2.0",
-        "cz-conventional-changelog": "^3.3.0",
-        "eslint": "^8.19.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-chai-friendly": "^0.7.2",
-        "eslint-plugin-cypress": "^2.12.1",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-prettier": "4.2.1",
-        "eslint-plugin-react": "^7.31.5",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "husky": "^8.0.0",
-        "lint-staged": "^13.0.3",
-        "prettier": "^2.7.1",
-        "shell-quote": "^1.7.3",
-        "start-server-and-test": "^1.15.2",
-        "tailwindcss": "^3.1.8",
-        "twin.macro": "3.0.0",
-        "typescript": "^4.7.4"
+        "@babel/core": "7.20.7",
+        "@babel/eslint-parser": "7.18.2",
+        "@babel/preset-react": "7.18.6",
+        "@babel/preset-typescript": "7.18.6",
+        "@commitlint/cli": "17.0.3",
+        "@commitlint/config-conventional": "17.0.3",
+        "@commitlint/cz-commitlint": "17.0.3",
+        "@emotion/babel-plugin": "11.10.5",
+        "@next/eslint-plugin-next": "13.1.1",
+        "@svgr/webpack": "6.5.1",
+        "@testing-library/cypress": "9.0.0",
+        "@types/node": "18.11.18",
+        "@types/prop-types": "15.7.5",
+        "@types/react": "18.0.18",
+        "@types/react-dom": "18.0.10",
+        "@typescript-eslint/eslint-plugin": "5.30.6",
+        "@typescript-eslint/parser": "5.30.6",
+        "axe-core": "4.6.1",
+        "babel-loader": "9.1.0",
+        "babel-plugin-macros": "3.1.0",
+        "commitizen": "4.2.4",
+        "cypress": "12.2.0",
+        "cypress-axe": "1.2.0",
+        "cypress-mochawesome-reporter": "3.2.3",
+        "cz-conventional-changelog": "3.3.0",
+        "eslint": "8.19.0",
+        "eslint-config-prettier": "8.5.0",
+        "eslint-plugin-chai-friendly": "0.7.2",
+        "eslint-plugin-cypress": "2.12.1",
+        "eslint-plugin-import": "2.26.0",
+        "eslint-plugin-jsx-a11y": "6.6.1",
+        "eslint-plugin-react": "7.31.5",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "husky": "8.0.0",
+        "lint-staged": "13.0.3",
+        "prettier": "2.7.1",
+        "shell-quote": "1.7.4",
+        "start-server-and-test": "1.15.2",
+        "tailwindcss": "3.2.4",
+        "twin.macro": "3.1.0",
+        "typescript": "4.9.4"
     },
     "engines": {
         "node": ">= 14.21.1 <=18.x.x",
@@ -99,27 +105,33 @@
     "license": "MIT",
     "name": "3d-streamer",
     "packageManager": "pnpm@7.10.0",
+    "private": true,
     "repository": {
         "type": "git",
         "url": "git+https://github.com/robinwalterfit/3d-streamer.git"
     },
     "scripts": {
-        "clean": "gatsby clean",
+        "cy:component:open": "cypress open --component",
+        "cy:component:run": "cypress run --component",
+        "cy:component:run:headless": "cypress run --component --headless",
         "cy:open": "cypress open",
         "cy:run": "cypress run",
         "cy:run:headless": "cypress run --headless",
-        "dev": "gatsby develop --inspect",
-        "generate": "gatsby build",
+        "dev": "NODE_OPTIONS='--inspect' next dev",
+        "export": "pnpm run generate && next export",
+        "generate": "ANALYZE=true next build",
         "lint": "pnpm run prettier:check && pnpm run lint:eslint",
         "lint:eslint": "eslint . --ext graphql,js,jsx,ts,tsx --max-warnings=0 --config ./.eslintrc --no-eslintrc",
         "lint:staged": "lint-staged",
         "prepare": "husky install",
         "prettier:check": "prettier --check .",
         "prettier:fix": "prettier --write .",
-        "serve": "gatsby serve",
+        "serve": "next start",
         "start": "pnpm run dev",
-        "test": "start-server-and-test serve http://localhost:8000 cy:run:headless",
-        "typecheck": "pnpm exec tsc -p tsconfig.json"
+        "test": "pnpm run test:component && pnpm run test:e2e",
+        "test:component": "cy:component:run:headless",
+        "test:e2e": "start-server-and-test serve http://localhost:8000 cy:run:headless",
+        "typecheck": "tsc -p tsconfig.json"
     },
     "version": "0.1.0"
 }
