--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "forceConsistentCasingInFileNames": true,
         "incremental": true,
         "isolatedModules": true,
-        "jsx": "preserve",
+        "jsx": "react-jsx",
         "jsxImportSource": "@emotion/react",
         "lib": ["dom", "dom.iterable", "esnext"],
         "module": "esnext",
