chore(linter): reconfigure the cypress file matching pattern and turn off "react/react-in-jsx-scope"

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,9 +33,17 @@
         {
             "files": [
                 "test/**/*.js",
+                "test/**/*.jsx",
                 "test/**/*.ts",
-                "**/*.test.js",
-                "**/*.test.ts"
+                "test/**/*.tsx",
+                "**/*.cy.js",
+                "**/*.cy.jsx",
+                "**/*.cy.ts",
+                "**/*.cy.tsx",
+                "**/*.spec.js",
+                "**/*.spec.jsx",
+                "**/*.spec.ts",
+                "**/*.spec.tsx"
             ],
             "extends": [
                 "plugin:cypress/recommended",
@@ -174,7 +182,7 @@
         "react/no-direct-mutation-state": "warn",
         "react/no-is-mounted": "warn",
         "react/no-typos": "error",
-        "react/react-in-jsx-scope": "error",
+        "react/react-in-jsx-scope": "off",
         "react/require-render-return": "error",
         "react/style-prop-object": "warn",
         // react-hooks rules
