chore(devcontainer): prepare the devcontainer to enable rapid development

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,8 @@
                 "tailwindCSS.includeLanguages": {
                     "typescript": "javascript",
                     "typescriptreact": "javascript"
-                }
+                },
+                "terminal.integrated.defaultProfile.linux": "zsh"
             }
         }
     },
