--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,6 +1,56 @@
 version: "3"
 
 services:
+  component-chrome:
+    command: --browser chrome --component
+    environment:
+      CYPRESS_BROWSER: chrome
+      CYPRESS_DOWNLOADS_FOLDER: /cypress/docker/chrome/downloads
+      CYPRESS_SCREENSHOTS_FOLDER: /cypress/docker/chrome/screenshots
+      CYPRESS_VIDEOS_FOLDER: /cypress/docker/chrome/videos
+    image: cypress/included:12.2.0
+    volumes:
+      - ./:/3d-streamer
+    working_dir: /3d-streamer
+
+  component-edge:
+    command: --browser edge --component
+    environment:
+      CYPRESS_BROWSER: edge
+      CYPRESS_DOWNLOADS_FOLDER: /cypress/docker/edge/downloads
+      CYPRESS_SCREENSHOTS_FOLDER: /cypress/docker/edge/screenshots
+      CYPRESS_VIDEOS_FOLDER: /cypress/docker/edge/videos
+    image: cypress/included:12.2.0
+    volumes:
+      - ./:/3d-streamer
+    working_dir: /3d-streamer
+
+  component-electron:
+    command: --browser electron --component
+    environment:
+      CYPRESS_BROWSER: electron
+      CYPRESS_DOWNLOADS_FOLDER: /cypress/docker/electron/downloads
+      CYPRESS_SCREENSHOTS_FOLDER: /cypress/docker/electron/screenshots
+      CYPRESS_VIDEOS_FOLDER: /cypress/docker/electron/videos
+    image: cypress/included:12.2.0
+    volumes:
+      - ./:/3d-streamer
+    working_dir: /3d-streamer
+
+  component-firefox:
+    command: --browser firefox --component
+    depends_on:
+      - 3d-streamer
+    environment:
+      CYPRESS_BROWSER: firefox
+      CYPRESS_DOWNLOADS_FOLDER: /cypress/docker/firefox/downloads
+      CYPRESS_SCREENSHOTS_FOLDER: /cypress/docker/firefox/screenshots
+      CYPRESS_VIDEOS_FOLDER: /cypress/docker/firefox/videos
+    image: cypress/included:12.2.0
+    volumes:
+      - ./:/3d-streamer
+    working_dir: /3d-streamer
+
   e2e-chrome:
     command: --browser chrome
     depends_on:
